--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "manual-installation",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "ts-node src/main.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@nestjs/common": "^10.3.9",
-    "@nestjs/core": "^10.3.9",
-    "@nestjs/platform-express": "^10.3.9",
-    "express": "^4.19.2",
-    "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
-    "ts-node": "^10.9.2"
-  }
+	"name": "manual-installation",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"dev": "ts-node src/main.ts",
+		"dev1": "ts-node customSrc/main.ts"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@nestjs/common": "^10.3.9",
+		"@nestjs/core": "^10.3.9",
+		"@nestjs/platform-express": "^10.3.9",
+		"express": "^4.19.2",
+		"reflect-metadata": "^0.2.2",
+		"rxjs": "^7.8.1",
+		"ts-node": "^10.9.2"
+	}
 }
