初始化装饰器

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 		"baseUrl": "./",
 		"paths": {
 			"@nestjs/*": [
-				"./customSrc/@nestjs/*"
+				"customSrc/@nestjs/*"
 			]
 		},
 		"emitDecoratorMetadata": true,
