--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "ts-node src/main.ts",
-		"dev1": "ts-node customSrc/main.ts"
+		"dev": "ts-node -r tsconfig-paths/register ./src/main.ts",
+		"custom": "nodemon"
 	},
 	"keywords": [],
 	"author": "",
@@ -14,9 +14,16 @@
 		"@nestjs/common": "^10.3.9",
 		"@nestjs/core": "^10.3.9",
 		"@nestjs/platform-express": "^10.3.9",
+		"@types/express": "^4.17.21",
+		"@types/node": "^20.14.9",
 		"express": "^4.19.2",
+		"nodemon": "^3.1.4",
 		"reflect-metadata": "^0.2.2",
 		"rxjs": "^7.8.1",
 		"ts-node": "^10.9.2"
+	},
+	"devDependencies": {
+		"cli-color": "^2.0.4",
+		"tsconfig-paths": "^4.2.0"
 	}
 }
