--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
 		"@types/express": "^4.17.21",
 		"@types/node": "^20.14.9",
 		"express": "^4.19.2",
+		"express-session": "^1.18.0",
 		"nodemon": "^3.1.4",
 		"reflect-metadata": "^0.2.2",
 		"rxjs": "^7.8.1",
 		"ts-node": "^10.9.2"
 	},
 	"devDependencies": {
+		"@types/express-session": "^1.18.0",
 		"cli-color": "^2.0.4",
 		"tsconfig-paths": "^4.2.0"
 	}
