--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,15 @@
 {
-	// 编译选项
-	"compilerOptions": {
-		"baseUrl": "./",
-		"paths": {
-			"@nestjs/*": [
-				"customSrc/@nestjs/*"
-			]
-		},
-		"emitDecoratorMetadata": true,
-		"experimentalDecorators": true, // 启用实验性的装饰器特性
-		"target": "ESNext", // 编译后的目标版本
-		"moduleResolution": "NodeNext", // 模块解析策略
-		"module": "NodeNext", // 
-	},
-	"include": [
-		"customSrc/**/*"
-	]
+  // 编译选项
+  "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@nestjs/*": ["customSrc/@nestjs/*"]
+    },
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true, // 启用实验性的装饰器特性
+    "target": "ESNext", // 编译后的目标版本
+    "moduleResolution": "NodeNext", // 模块解析策略
+    "module": "NodeNext" //
+  },
+  "include": ["customSrc/**/*"]
 }
