--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,5 @@
 link-workspace-packages = true
-# package-manager-strict = false
+hoist=false
+strict-peer-dependencies=false
+auto-install-peers=true
+dedupe-peer-dependents=true
