--- a/package.json
+++ b/package.json
@@ -1,30 +1,24 @@
 {
-	"name": "manual-installation",
-	"version": "1.0.0",
-	"description": "",
-	"scripts": {
-		"c": "pnpm --stream -r test",
-		"zz": "pnpm -F nestDemo test"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"@nestjs/common": "^10.3.9",
-		"@nestjs/core": "^10.3.9",
-		"@nestjs/platform-express": "^10.3.9",
-		"@types/express": "^4.17.21",
-		"@types/node": "^20.14.9",
-		"express": "^4.19.2",
-		"express-session": "^1.18.0",
-		"nodemon": "^3.1.4",
-		"reflect-metadata": "^0.2.2",
-		"rxjs": "^7.8.1",
-		"ts-node": "^10.9.2"
-	},
-	"devDependencies": {
-		"@types/express-session": "^1.18.0",
-		"cli-color": "^2.0.4",
-		"tsconfig-paths": "^4.2.0"
-	}
+  "name": "manual-installation",
+  "version": "1.0.0",
+  "description": "",
+  "scripts": {
+    "c": "pnpm --stream -r test",
+    "zz": "pnpm -F nestDemo test"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@types/node": "^20.14.9",
+    "nodemon": "^3.1.4",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.1",
+    "ts-node": "^10.9.2"
+  },
+  "devDependencies": {
+    "@types/express-session": "^1.18.0",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.5.4"
+  }
 }
