--- a/packages/@nestjs/common/package.json
+++ b/packages/@nestjs/common/package.json
@@ -5,5 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "dev": "ts-node -r tsconfig-paths/register ./main.ts"
+  },
+  "dependencies": {
+    "@nest-learn/tsconfig": "workspace:^"
   }
 }
