修改配置读取

--- a/apps/custom-demo/package.json
+++ b/apps/custom-demo/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "main.ts",
   "scripts": {
-    "dev": "ts-node -r tsconfig-paths/register ./main.ts"
+    "dev": "ts-node -r tsconfig-paths/register ./main.ts",
+    "w:dev": "nodemon main.ts"
   },
   "keywords": [],
   "author": "",
