--- a/apps/nest-demo/package.json
+++ b/apps/nest-demo/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "nestDemo",
+  "name": "@nest-learn/custom-demo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "w:dev": "nodemon main.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@nest-learn/tsconfig": "workspace:^",
     "@nestjs/common": "^10.3.9",
     "@nestjs/core": "^10.3.9",
     "@nestjs/platform-express": "^10.3.9"
