--- a/apps/nest-demo/package.json
+++ b/apps/nest-demo/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@nest-learn/tsconfig": "workspace:^",
+    "@nestjs/cli": "^10.4.4",
     "@nestjs/common": "^10.3.9",
     "@nestjs/core": "^10.3.9",
-    "@nestjs/platform-express": "^10.3.9"
+    "@nestjs/platform-express": "^10.3.9",
+    "@nestjs/schematics": "^10.1.4"
   }
 }
