--- a/apps/nest-demo/package.json
+++ b/apps/nest-demo/package.json
@@ -15,6 +15,7 @@
     "@nestjs/common": "^10.3.9",
     "@nestjs/core": "^10.3.9",
     "@nestjs/platform-express": "^10.3.9",
-    "@nestjs/schematics": "^10.1.4"
+    "@nestjs/schematics": "^10.1.4",
+    "@types/express": "^4.17.21"
   }
 }
