--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^20.14.9",
+    "dotenv": "^16.4.5",
     "nodemon": "^3.1.4",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
